<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/menu_go_job"
            android:checked="true"
            android:icon="@drawable/ic_job_list"
            android:title="@string/job_list" />

        <item
            android:id="@+id/menu_go_profile"
            android:checkable="false"
            android:icon="@drawable/ic_profile"
            android:title="@string/menu_profile" />

        <item
            android:id="@+id/menu_go_setting"
            android:checked="false"
            android:icon="@drawable/ic_setting"
            android:title="@string/menu_setting" />

        <item
            android:id="@+id/menu_go_logout"
            android:checkable="false"
            android:icon="@drawable/ic_logout"
            android:title="@string/menu_logout" />

    </group>
</menu>