<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="60dp"
    android:background="@drawable/resume_border">

    <ImageView
        android:id="@+id/imagePlus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginStart="20dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_user_ab" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginStart="10dp"
        android:layout_toEndOf="@+id/imagePlus"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile_resume_attach"
            android:textColor="@color/black"
            android:textSize="13sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:text="@string/profile_resume_pdf"
            android:textColor="@color/home_search_hint"
            android:textSize="12sp" />

    </LinearLayout>

    <Button
        android:id="@+id/button_save"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/round_button"
        android:paddingEnd="60dp"
        android:paddingStart="60dp"
        android:text="@string/save"
        android:textColor="@color/white"
        android:textSize="19sp"
        />

</RelativeLayout>