<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="@color/colorPrimary"
        android:gravity="center_vertical"
        android:padding="10dp"
        android:text="@string/skills"
        android:textColor="@android:color/white"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/editText_Report"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_skills"
            android:minLines="2"
            app:backgroundTint="@color/colorPrimary" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="10dp"
            android:text="@string/submit"
            android:textColor="@color/white"
            app:backgroundTint="@color/colorPrimary" />

    </LinearLayout>

</LinearLayout>