<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="200dp"
    android:background="@drawable/search_top_bg">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home_search_head_line"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <View
            android:layout_width="50dp"
            android:layout_height="2dp"
            android:layout_marginTop="8dp"
            android:background="@color/login_line" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/home_search_find"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/edt_search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="40dp"
            android:background="@drawable/white_button"
            android:drawableStart="@drawable/ic_search"
            android:drawablePadding="8dp"
            android:hint="@string/home_search_keyword"
            android:imeOptions="actionSearch"
            android:inputType="textPersonName"
            android:padding="10dp"
            android:textColor="@color/black"
            android:textColorHint="@color/home_search_hint"
            android:textCursorDrawable="@drawable/cursor_black"
            android:textSize="15sp" />

    </LinearLayout>

</RelativeLayout>